<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/transaction_card_holder_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:text="@string/transaction_card_holder_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/transaction_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/transaction_card_number"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/transaction_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/transaction_value"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/transaction_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/transaction_exp_date"
        android:textSize="16sp" />

</LinearLayout>